# HeiMa-AI-LLM-RAG-Agent-Dev

./: .gitignore  README.md  requirements.txt
AI_LLM_RAG_Agent_Dev/: 01_TestApiKey.py  02_OpenAI_Library_Basic_Usage.py  03_OpenAI_Library_Stream_Output.py  04_OpenAI_Library_With_History.py  05_Financial_Text_Classification.py  06_JSON_Usage_Demo.py  07_Information_Extraction_FewShot.py  08_Lottery_Information_Extraction.py  09_Text_Matching_FewShot.py  10_Cosine_Similarity_Algorithm.py  11_LangChain_Tongyi_Basic_Usage.py  12_LangChain_Tongyi_Stream_Output.py  13_LangChain_Tongyi_Chat_Model.py  14_LangChain_Message_Shorthand.py  (+20 more)
zhisaotong_agent/: MANIFEST.in  PROJECT_OVERVIEW.md  __init__.py  app.py  pyproject.toml  run_app.bat  run_app.sh
zhisaotong_agent/agent/tools/: agent_tools.py  middleware.py
zhisaotong_agent/config/: chroma.yml
zhisaotong_agent/model/: factory.py
zhisaotong_agent/rag/: __init__.py  rag_service.py  vector_store.py
zhisaotong_agent/src/zhisaotong_agent/: PROJECT_OVERVIEW.md  app.py
zhisaotong_agent/src/zhisaotong_agent/agent/: __init__.py  react_agent.py
zhisaotong_agent/src/zhisaotong_agent/agent/tools/: __init__.py  agent_tools.py
zhisaotong_agent/src/zhisaotong_agent/config/: agent.yml  prompts.yml  rag.yml
zhisaotong_agent/src/zhisaotong_agent/model/: __init__.py  factory.py
zhisaotong_agent/src/zhisaotong_agent/utils/: config_handler.py  file_handler.py  logger_handler.py  path_tool.py  prompt_loader.py
zhisaotong_agent/utils/: api_key.py  config_handler.py  logger_handler.py  test.py  test_import_runner.py
(+11 files in other folders)
